# BeeEyeFirmware

./: CMakeLists.txt  README.md  prj.conf  prj_release.conf  release.conf
boards/Myself/BeeEye/: BeeEye.dts  BeeEye.yml  BeeEye_defconfig  Kconfig.BeeEye  board.cmake  board.yml
src/: ble_client.c  ble_client.h  ble_server.h  lora.c  lora.h  main.c  messages.c  messages.h  onewire.c  onewire.h  protocol.h  rtc.c  rtc.h  uart_print.c  uart_print.h  vsense.c  vsense.h
